<resources>
    <string name="app_name">MCheque</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Client id</string>
    <string name="prompt_password">Access Code</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name"><b>Name</b></string>
    <string name="acc_no"><b>Acc/No</b></string>
    <string name="date"><b>Date</b></string>
    <string name="amt"><b>Amount</b></string>
    <string name="confirm"><b>Confirm</b></string>
    <string name="rupee">\u20B9</string>
    <string name="invoice_message"><b>Congratulations!</b>\nYou have successfully created mCheque!</string>
</resources>
