<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_cheque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.home.mcheque.CreateChequeActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="14sp"
                        android:text="@string/name"
                        android:textColor="@color/colorDarkGray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:id="@+id/tvPayeeName"
                        android:paddingLeft="10dp"
                        android:background="@drawable/border"
                        android:textColor="@color/colorLightGray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="14sp"
                        android:text="@string/acc_no"
                        android:textColor="@color/colorDarkGray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="16sp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/border"
                        android:id="@+id/tvPayeeAccountNo"
                        android:textColor="@color/colorLightGray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="14sp"
                        android:text="@string/amt"
                        android:textColor="@color/colorDarkGray"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="16sp"
                        android:paddingLeft="10dp"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"
                        android:hint="Enter Cheque Amount"
                        android:textColorHint="#DDDDDD"
                        android:id="@+id/editTextAmount"
                        android:maxLines="1"
                        android:inputType="number"
                        android:background="@drawable/border"
                        android:textColor="@color/colorLightGray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="14sp"
                        android:text="@string/date"
                        android:textColor="@color/colorDarkGray"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="16sp"
                        android:inputType="none"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"
                        android:hint="Cheque Issue Date"
                        android:textColorHint="#DDDDDD"
                        android:paddingLeft="10dp"
                        android:id="@+id/editTextDate"
                        android:focusable="false"
                        android:background="@drawable/border"
                        android:textColor="@color/colorLightGray"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="Continue"
            android:textAlignment="center"
android:typeface="monospace"
            android:textSize="23sp"
            android:background="#ffa500"
            android:textColor="#ffffff"/>
</LinearLayout>
